# QT6CoreBeginners

./: .gitignore  CMakeLists.txt  LessonsList.xlsx  README.md
Section01/: CmakeLists.txt  README.md
Section01/001_WhatDoesThisCourseCover/: CMakeLists.txt  README.md
Section01/002_WhatThisCourseDoesntCover/: README.md
Section01/003_WhoShouldTakeThisCourse/: README.md
Section01/004_CoursePrerequisites/: README.md
Section01/005_IfYouAlreadyKnowCpp/: README.md
Section01/006_WhoIsTheInstructor/: README.md
Section01/007_RawAndUnfiltered/: README.md
Section01/008_QtOverview/: README.md
Section01/009_CoursesOverview/: README.md
Section01/010_QtIsMassive/: README.md
Section01/011_WhatWhyHowRecap/: README.md
Section01/012_GoalsOfThisCourse/: README.md
Section01/013_WhatIsQt/: README.md
Section01/014_WhatCanYouMakeWithQt/: README.md
Section01/015_Downloading/: README.md
Section01/016_Installing/: README.md
Section01/017_InstallationNotes/: README.md
Section01/018_InstallingOnWindows/: README.md
Section01/019_WindowsNotes/: README.md
Section01/020_InstallingOnMac/: README.md
Section01/021_MacNotes/: README.md
Section01/022_InstallingOnLinux/: README.md
Section02/: CMakeLists.txt  README.md  main.cpp
Section03/: README.md
Section04/: README.md
Section05/: README.md
Section06/: README.md
Section07/: README.md
Section08/: README.md
Section09/: README.md
Section10/: README.md
Section11/: README.md
Section12/: README.md
Section13/: README.md
Section14/: README.md
Section15/: README.md
Section16/: README.md
(+159 files in other folders)
